dashboard queries and timezone

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -62,73 +62,12 @@
       <input id="event_address_city" class="form-control" type="text" name="event[address_attributes][city]" >
     </div>
   </div>
-                <div class="control-group">
-                  <label for="inputlogo" class="control-label">State :</label>
-                  <div class="controls">
-                    <select class="form-control" name="user[address_attributes][state]" tabindex="9">
-                      <option value="">Select</option>
-                      <option value="Alabama">Alabama</option>
-                      <option value="Alaska">Alaska</option>
-                      <option value="Arizona">Arizona</option>
-                      <option value="Arkansas">Arkansas</option>
-                      <option value="California">California</option>
-                      <option value="Colorado">Colorado</option>
-                      <option value="Connecticut">Connecticut</option>
-                      <option value="Delaware">Delaware</option>
-                      <option value="Florida">Florida</option>
-                      <option value="Georgia">Georgia</option>
-                      <option value="Hawaii">Hawaii</option>
-                      <option value="Idaho">Idaho</option>
-                       <option value="Illinois">Illinois</option>
-                      <option value="Indiana">Indiana</option>
-                      <option value="Iowa">Iowa</option>
-
-                      <option value="Kansas">Kansas</option>
-                      <option value="Kentucky[C]">Kentucky[C]</option>
-                      <option value="Louisiana">Louisiana</option>
-
-                      <option value="Maine">Maine</option>
-                      <option value="Maryland">Maryland</option>
-                      <option value="Massachusetts[D]">Massachusetts[D]</option>
-
-
-                      <option value="Michigan">Michigan</option>
-                      <option value="Minnesota">Minnesota</option>
-                      <option value="Mississippi">Mississippi</option>
-
-                      <option value="Missouri">Missouri</option>
-                      <option value="Montana">Montana</option>
-                      <option value="Nebraska">Nebraska</option>
-
-                      <option value="Nevada">Nevada</option>
-                      <option value="New Hampshire">New Hampshire</option>
-                      <option value="New Jersey">New Jersey</option>
-
-                    <option value="New Mexico">New Mexico</option>
-                      <option value="New York">New York</option>
-                      <option value="North Carolina">North Carolina</option>
-
-                      <option value="North Dakota">North Dakota</option>
-                      <option value="Ohio">Ohio</option>
-                      <option value="Oklahoma">Oklahoma</option>
-                      <option value="Oregon">Oregon</option>
-                      <option value="Pennsylvania[E]">Pennsylvania[E]</option>
-                      <option value="Rhode Island[F]">Rhode Island[F]</option>
-                      <option value="South Carolina">South Carolina</option>
-                      <option value="South Dakota">South Dakota</option>
-                      <option value="Tennessee">Tennessee</option>
-                      <option value="Texas">Texas</option>
-                      <option value="Utah">Utah</option>
-                      <option value="Vermont">Vermont</option>
-                      <option value="Virginia[G]">Virginia[G]</option>
-                      <option value="Washington">Washington</option>
-                      <option value="West Virginia">West Virginia</option>
-                      <option value="Wisconsin">Wisconsin</option>
-                      <option value="Wyoming">Wyoming</option>
-                    </select>
-                  </div>
-                </div>
-                
+       <div class="control-group">
+          <label class="control-label" for="event_address_state">State:</label>
+           <div class="controls" >
+             <input id="event_address_state" class="form-control" type="text" name="event[address_attributes][state]" >
+           </div>
+         </div>
            <% end %>
 
 
@@ -148,16 +87,17 @@
                     </span>
                 </div>
           </div>
-          <div class="control-group" style="margin:0 0 0 50px">
-            <%= f.submit "Save as Draft", class: "btn btn-primary" %>
-          </div>
 
-  <div class="control-group" style= "margin:20px 0 0 50px">
-       <div class="controls" >
-    </div>
-    <%= f.submit "Publish", class: "btn-sm new" %>
+  <div class="control-group" style= "margin-top:60px">
+    <%= f.submit class: "btn-sm new" %>
   </div>
 
+   <div class="control-group">
+    <div class="controls" >
+      <input id="event_published" class="form-control" type="hidden" name="event[published]" value=true >
+    </div>
+    <%= f.submit "Or Save as Draft", class: "btn btn-primary pull-right" %>
+  </div>
 </div>
 <% end %>
 </div><!-- form horizontal-->
