--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,3 +15,10 @@
 	  <%= render partial: "layouts/dash_board/events_for_host" %>
 	<% end %>
 <%= render partial: "layouts/dash_board/sidebar_bottom"%>
+
+
+<style>
+tr.even td.sorting_1 {
+    background-color: initial;
+}
+</style>
