--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,8 +22,7 @@
                                 </tr>
                 <tr><td><strong>Start Time</strong><span> <%= @event.event_start_date.strftime("%I:%M%p") %></span></td><td><strong>End Time</strong><span> <%= @event.event_end_date.strftime("%I:%M%p") %></span></td></tr>
                 <tr><td colspan="2"><strong>Location:</strong></td></tr>
-                <tr><td colspan="2">  <%= @event.venue %>
-</td></tr>
+                <tr><td><%= "#{event.address.city} #{event.address.state}" if @event.address %></td></tr>
                 <tr><td colspan="2"><strong>Host Name:</strong></td></tr>
                 <tr><td colspan="2">  <%#= @event.user.uname %> <%#= @event.user.last_name %>
 </td></tr>
@@ -43,24 +42,33 @@
         <div class="clearfix"></div>
 
       <div style="height:130px;background-color:black; padding-bottom:20px">
-         <%= link_to image_tag("image.jpeg",height: "120", weight: "120"), images_event_path %>
+        <a href='/assets/image.jpeg' class="fancybox"><img src="/assets/image.jpeg"></a>
+         <%= link_to image_tag("image.jpeg",height: "120", weight: "120"), class:"fancybox" %>
       </div>
 
 
 
      <%= render partial: "layouts/dash_board/sidebar_bottom"%>
 
-   <script>
-$('p').filter(function() {
-        return $.trim($(this).text()) === '' && $(this).children(':visible').length == 0
-    }).remove()
+
+<script>
+jQuery(function() {
+  $("a.fancybox").fancybox();
+});
+</script>
+<script>
+   $(document).ready(function(){
+   $('p img').parent().hide();
+   $('p object').parent().hide();
+
+   });
+
+
 
 </script>
-     <style>
-      td p img {
-        display:none;
-      }
-      td p object{
-        display:none;
-      }
-     </style>
+
+<style>
+
+p { display : inline; }
+
+</style>
