--- a/app/views/layouts/dash_board/_events_for_guest.html.erb
+++ b/app/views/layouts/dash_board/_events_for_guest.html.erb
@@ -16,7 +16,7 @@
 								<% @events_attended.each do |event| %>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
 									<td><%= event.registered_users.count %></td>
 								</tr>
@@ -60,8 +60,8 @@
 								<% @current_events.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
-									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
+                                    <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>								
+                                    <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
 									<td><%= event.registered_users.count %></td>
 								</tr>
 								<% end %>
@@ -104,7 +104,7 @@
 								<% @events_registered.each do |event|%>
 								<tr>
 									<td><%= event.title %></td>
-									<td><%= event.venue %></td>
+									<td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>
 									<td><%= event.event_start_date.strftime("%b %d,%Y") %></td>
 									<td><%= event.registered_users.count %></td>
 								</tr>
