--- a/app/views/layouts/dash_board/_sidebar_top.html.erb
+++ b/app/views/layouts/dash_board/_sidebar_top.html.erb
@@ -16,7 +16,7 @@
 			      </div>
 			      <% end %>
 			      <div class="test <%= 'selected' if params[:action] == 'about_us_dashbord'%>">
-				    <li><a href='/about_us_dashbord'>FIND EVENT</a></li>
+				    <li><a href='/find_events'>FIND EVENT</a></li>
 				  </div>	         
 				 <% else %>
                   <div class="test <%= 'selected' if params[:action] == 'the_ec'%>">
